[package]
name = "zcmk"
description = "ZCMK: Real-Time Bid/Ask (RTBA) Zero-Commission Settlement Protocol [RFC-004]"
# Inheriting core protocol DNA from the imperial root workspace
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/Aicent-Stack/zcmk"
homepage = "http://zcmk.com"
documentation = "https://github.com/Aicent-Stack/manifesto/blob/main/rfcs/RFC-004-ZCMK-BLOOD.md"
rust-version.workspace = true

# Keywords and categories for AI-native financial authority
keywords = ["hft", "micro-settlement", "rfc-004", "compute-market", "128-bit-atomic", "picotoken"]
categories = ["financial-services", "algorithms", "distributed-computing", "network-programming"]

[dependencies]
# --- Core Organism Linking (L1 Metabolic Layer) ---
# ZCMK operates as a pure financial primitive. It consumes neural pulses (RTTP) 
# to execute atomic clearings. High-level cognitive orchestration (Aicent Brain) 
# is decoupled here to maintain a strict unidirectional dependency graph.
rttp = { workspace = true, features = ["std"] }

# --- HFT-Grade Matching Engine (Non-Shrunken) ---
# Optimized for nanosecond-speed auctions and zero-friction shunting.
# [PERF] Utilizing lock-free queues and hardware-optimized mutexes.
crossbeam-queue   = { workspace = true } 
parking_lot       = { workspace = true } 
once_cell         = { workspace = true } # Safe static initialization of the market manifold

# --- Financial Precision & Logic ---
# [RFC-004] Supporting picotoken granularity (10^-12) for micro-inference pricing.
# Utilizing high-precision arithmetic to ensure economic homeostasis.
num-traits = { workspace = true }
serde      = { workspace = true, features = ["derive"] }
anyhow     = { workspace = true }
tokio      = { workspace = true, features = ["sync", "rt"] } 
rand       = { workspace = true } # For market pressure chaos-testing
tracing    = { workspace = true } # Audit-grade financial telemetry logs

[features]
# Standard implementation: Optimized for high-throughput clearing environments.
default = ["std"]

# [Standard v1.0] Standard library support for the value metabolism layer.
# Explicitly re-exporting 'std' for foundational dependencies to ensure 
# transitive compatibility across the unified workspace.
std = [
    "serde/std", 
    "anyhow/std", 
    "rttp/std"
]

# [RFC-006] Hive Metabolic Shunting Integration.
# Enables collective redistribution of compute credits across the Aicent.net grid.
hive-metabolism = []

[dev-dependencies]
# Performance benchmarking for Reflex-Cycle Finality targets (<1ms).
criterion = { workspace = true, features = ["async_tokio"] }
