[package]
name = "zcmk"
description = "ZCMK: Real-Time Bid/Ask (RTBA) Zero-Commission Settlement Protocol [RFC-004]"
# Inheriting core protocol DNA from the imperial root workspace
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "http://zcmk.com"
documentation = "https://github.com/Aicent-Stack/manifesto/blob/main/rfcs/RFC-004-ZCMK-BLOOD.md"
rust-version.workspace = true

# Keywords and categories for AI-native financial authority
keywords = ["hft", "micro-settlement", "rfc-004", "compute-market", "128-bit-atomic", "picotoken"]
categories = ["financial-services", "algorithms", "distributed-computing", "network-programming"]

[dependencies]
# --- Core Organism Linking (Unidirectional Dependency Flow) ---
# ZCMK is the blood of the organism; it clears value atomically with neural pulses (RTTP).
# 🛡️ THE ARCHITECTURAL LOCK: Decoupled from Brain (aicent) to break cyclic deadlocks.
rttp = { workspace = true, features = ["std"] }

# --- HFT-Grade Matching Engine (Non-Shrunken) ---
# Optimized for nanosecond-speed auctions and zero-friction shunting.
# [PERF] Utilizing lock-free queues and hardware-optimized 128-bit manifolds.
crossbeam         = { workspace = true } # REQUIRED for AtomicCell<u128> support
crossbeam-queue   = { workspace = true } # Lock-free shunting for the RTBA manifold
parking_lot       = { workspace = true } # HFT-grade synchronization primitives
once_cell         = { workspace = true } # Safe static initialization of the market manifold

# --- Financial Precision & Logic ---
# [RFC-004] Supporting picotoken granularity (10^-12) for micro-inference pricing.
# Utilizing high-precision arithmetic to ensure economic homeostasis.
num-traits = { workspace = true }
serde      = { workspace = true, features = ["derive"] }
anyhow     = { workspace = true }
tokio      = { workspace = true, features = ["sync", "rt"] } 
rand       = { workspace = true } # For market pressure chaos-testing
tracing    = { workspace = true } # Audit-grade financial telemetry logs

[features]
# Standard implementation: Optimized for high-throughput clearing environments.
default = ["std"]

# [Standard v1.0] Standard library support for the value metabolism layer.
# Re-exports 'std' for internal Aicent Stack dependencies to ensure homeostasis.
std = [
    "serde/std", 
    "anyhow/std", 
    "rttp/std"
]

# [RFC-006] Hive Metabolic Shunting Integration.
# Enables collective redistribution of compute credits across the Aicent.net grid.
hive-metabolism = []

[dev-dependencies]
# Performance benchmarking for Reflex-Cycle Finality targets (<1ms).
criterion = { workspace = true, features = ["async_tokio"] }
