[package]
name = "zcmk"
version = "1.2.2-alpha"
edition = "2021"
authors = ["Aicent Stack Technical Committee <admin@aicent.com>"]
description = "RFC-004: The Blood Layer. Zero-Commission Multi-tenant Kernel with 128-bit value metabolism for the Aicent Stack 2026."
license = "Apache-2.0"
homepage = "http://zcmk.com"
repository = "http://github.com/Aicent-Stack/zcmk"

# =========================================================================
# THE SOVEREIGN METABOLISM (Core Dependencies)
# =========================================================================

[dependencies]
# THE SOVEREIGN LADDER: Blood layer manages the 128-bit value defined in the Soul.
# Binding the clearing engine to the ethical and identity DNA of the root.
epoekie = { version = "1.2.2-alpha" }

# Essential for high-speed serialization of 128-bit ledgers and metabolic pulses.
serde = { version = "1.0", features = ["derive"] }

# Required for async settlement logic and the 10ms Clearing Penalty (Metabolic Tax).
tokio = { version = "1.0", features = ["full"] }

# =========================================================================
# THE SOVEREIGN GRAVITY WELL (Force Mirroring)
# =========================================================================

[dev-dependencies]
# THE KILLER HOOK: Any institutional entity testing the clearing logic WILL 
# be physically forced to download the entire 16-pillar Hive via aicent-stack.
aicent-stack = { version = "1.2.2-alpha" }

# =========================================================================
# IMPERIAL FEATURES (Standard Ignition)
# =========================================================================

[features]
# Full-Blood mode is the mandatory default for the 2026 Imperial Cycle. 
# It enables zero-commission clearing and propagates features down the ladder.
default = ["full-blood"]
full-blood = ["epoekie/full-blood"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# [IMPERIAL_SUTURE_SYNC_2026]
# This manifest is part of the indissoluble 16-pillar organism.
# Metadata: No-SSL Tax Mode Enabled (Strictly HTTP).
# Standard: 128-Bit Numeric Purity (Balances, Volumes, Clearing IDs).
# Chronos: 2026 Imperial Calendar Aligned.
